--- a/css/styles.css
+++ b/css/styles.css
@@ -97,11 +97,14 @@ body {
 /* header contact */
 
 .header-contact{
+    display: flex;
     color: var(--text-color);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    align-items: center;
+    
 }
 .contact-list {
     display: flex;
@@ -117,9 +120,19 @@ body {
 .footer-contact:focus,
 .map:hover,
 .map:focus
+
  {
     color: var(--accent-color);
 }
+
+.contact-icon {
+    fill:#757575;
+    margin-right: 10px;
+}
+.contact-icon:hover {
+    fill: var(--accent-color);
+}
+
 
 
 /* hero */
@@ -139,6 +152,7 @@ body {
 .hero-title{
     display: block;
     max-width: 1600px;
+    height: 600px;
     margin-left: auto ;
     margin-right: auto;
 }
@@ -202,12 +216,17 @@ body {
     height: 120px;
     width: 270px;
     margin-bottom: 30px;
-    position: center;
+    
 }
+
+
+
+
 
 .preference-icon {
     width: 70px;
     height: 70px;
+    margin: 25px 100px;
 }
 
 
@@ -251,8 +270,24 @@ body {
 
 .team-list {
     display: flex;
-    justify-content:space-between;
+    justify-content:space-between;  
 }
+
+.team-item {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-section{
+    display: block;
+    max-width: 1600px;
+    height: 708px;
+    margin-left: auto;
+    margin-right: auto;
+    background: #F5F4FA;
+}
+
 .content {
     /* padding: 0 0 20px 70px; */
     text-align: center;
@@ -272,12 +307,117 @@ body {
     line-height: 1.19;
 }
 
+.desc {
+    margin-bottom: 16px;
+}
+
+
+.team-soc-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px ;
+    
+}
+
+.team-soc-items{
+    width: 44px;
+    height: 44px;
+    
+}
+
+.team-soc-items:not(:last-child) {
+    margin-right: 10px;
+}
+
+.team-soc-link{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    /* background-color: #FFFFFF; */
+    background-color: #FFFFFF;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.team-soc-link {
+    fill: #AFB1B8;
+}
+
+
+.team-soc-link:hover{
+    background-color: var(--accent-color);
+    fill: #FFFFFF;
+}
+
+/* Clients */
+.clients-title {
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    
+    color: var(--primary-text-color);
+    margin-bottom: 50px;
+}
+
+.clients-icon {
+    fill:rgba(175, 177, 184, 1);
+}
+
+.clients-icon:hover {
+    fill: var(--accent-color);
+}
+
+.clients-item:hover{
+    border: 1px solid var(--accent-color);
+}
+
+.clients-list{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.clients-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
+    height: 92px;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.clients-item:not(:last-child){
+    margin-right: 30px;
+}
+
+
+
+
+
 
 /* footer */
 .footer {
+    display: block;
+    max-width: 1600px;
+    height: 252px;
+    margin-left: auto;
+    margin-right: auto;
+    
     background-color: #2F303A;
     padding: 60px 0;
+
 }
+
+.footer-conteiner{
+    display: flex;
+}
+
 .footer-logo{
     display: block;
     margin-bottom: 28px;
@@ -301,6 +441,64 @@ body {
     line-height: 1.7;
 }
 
+.footer-title{
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
+
+
+
+.footer-soc-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-soc-item{
+    width: 44px;
+    height: 44px;
+}
+
+.footer-soc-item:not(:last-child) {
+    margin-right: 10px;
+}
+
+.footer-soc-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.1);
+    justify-content: center;
+    align-items: center; 
+}
+
+.footer-soc-link{
+    fill:#ffffff;
+}
+
+.footer-soc-link:hover{
+    background-color: var(--accent-color);
+
+}
+
+
+.soc-networks {
+    height: 80px;
+     width: 206px;
+     margin-left: 70px;
+}
+
+
+
+
+
+
+
 
 
 /* PORTFOLIO */
@@ -321,6 +519,11 @@ body {
     width: 370px;
     /* flex-basis: calc((100% - 60px) / 3); */
    margin: 15px;
+
+}
+
+.grid-item:hover{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .headline {
     padding: 20px 24px;
@@ -344,6 +547,7 @@ body {
 .portfolio-btn:hover {
     background-color: var(--accent-color);
     color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .caption{
     font-size: 18px;
