--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,11 @@ body {
 
 .header {
     border-bottom: 1px solid #ECECEC;
+    display: block;
+    max-width: 1600px;
+    height: 80px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .header-container {
